--- a/features/landing/features/request-chat/components/articles/ArticlesList.css
+++ b/features/landing/features/request-chat/components/articles/ArticlesList.css
@@ -9,20 +9,22 @@
   margin-bottom: 24px;
   line-height: 28px;
 
+
+
   &:hover {
     box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.16);
+    transform: scale(1.02);
   }
 
   @media (--smallDown) {
     min-width: 280px;
-    
   }
 }
 
 .title {
   font: var(--title-small);
-   font-size: 20px;
-    line-height: 24px;
+  font-size: 20px;
+  line-height: 24px;
   white-space: normal;
 }
 
@@ -38,7 +40,6 @@
     overscroll-behavior: contain;
   }
 }
-
 
 .wrapper::-webkit-scrollbar {
   display: none;
