--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -141,7 +141,7 @@
   height: 100%;
   box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.08);
   transition: all ease-in 0.2s !important;
-  border-bottom: none !important;
+  border: 1px solid rgba(97, 102, 129, 0.04);
 
   color: var(--color-text) !important;
 
@@ -178,8 +178,8 @@
 }
 
 .buttonText {
-  font-size: 24px;
-  line-height: 28px;
+  font-size: 20px;
+  line-height: 24px;
   white-space: normal;
   text-align: left;
   margin: 0 16px;
