--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -1,9 +1,10 @@
 .intro {
+  padding-top: 24px;
   padding-bottom: 96px;
 
   @media (--smallDown) {
     width: 100vw;
-    padding: 24px 16px 56px;
+    padding: 48px 16px 56px;
   }
 }
 
