--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -12,6 +12,11 @@
   margin: 0 auto 24px;
   font: var(--title-extra);
   text-align: center;
+
+
+  @media (--smallDown) {
+    text-align: left;
+  }
 }
 
 .logos {
@@ -21,6 +26,7 @@
   margin-bottom: 40px;
 
   @media (--smallDown) {
+    justify-content: flex-start;
     margin-bottom: 32px;
   }
 }
