--- a/features/landing/features/request-chat/components/Conclusion/Conclution.css
+++ b/features/landing/features/request-chat/components/Conclusion/Conclution.css
@@ -23,7 +23,7 @@
   @media (--smallDown) {
     border: none;
     flex-direction: column;
-    padding: 24px 0;
+    padding: 0;
 
     padding-bottom: 0;
   }
