--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -21,14 +21,14 @@
 }
 
 .buttonWrapper {
-  width: 88px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  max-width: 220px;
 
   @media (--smallDown) {
-    width: 120px;
     padding-right: 16px;
   }
 }
@@ -37,7 +37,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 64px;
   margin-bottom: 24px;
 }
 
