--- a/features/main/layout/organisms/Header/organisms/OtherPartners/OtherPartners.css
+++ b/features/main/layout/organisms/Header/organisms/OtherPartners/OtherPartners.css
@@ -16,8 +16,11 @@
   padding: 6px 20px !important;
   color: var(--color-text-secondary) !important;
   text-transform: uppercase;
+  transition: background-color, color 0.2s ease-in !important;
 
-  &:hover {
+  &:not(.current):hover {
+    background-color: rgba(247, 246, 242, 0.2);
+    color: #fff !important;
     border-bottom: 1px solid transparent !important;
   }
 }
@@ -40,6 +43,10 @@
   line-height: 16px;
   color: var(--color-text-secondary) !important;
 
+  &:first-child {
+    border-right: 1px solid var(--color-text-secondary);
+  }
+  
   &:hover {
     border-bottom: 1px solid transparent !important;
   }
