--- a/ui/organisms/Footer/SecondaryFooter/SecondaryFooter.css
+++ b/ui/organisms/Footer/SecondaryFooter/SecondaryFooter.css
@@ -1,6 +1,6 @@
 .footer {
   padding: 24px 48px 32px 48px;
-  background-color: var(--color-beige);
+  background-color: #fff;
   border-top: 1px solid var(--divider-color);
 
   @media (--smallDown) {
@@ -9,7 +9,7 @@
 }
 
 .white {
-  background-color: var(--color-beige);
+  background-color: #fff;
 }
 
 .row {
