--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -15,6 +15,8 @@
 
 
   @media (--smallDown) {
+    font-size: 32px;
+    line-height: 36px;
     text-align: left;
   }
 }
@@ -148,9 +150,9 @@
   height: 100%;
   box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.08);
   transition: all ease-in 0.2s !important;
-  border: 1px solid rgba(97, 102, 129, 0.04);
-
+  border: none;
   color: var(--color-text) !important;
+  border-bottom: none !important;
 
   @media (--smallDown) {
     min-width: 280px;
@@ -166,7 +168,6 @@
     &:hover {
     box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.16);
     transform: scale(1.02);
-    border-bottom: none !important;
   }
   }
 }
