--- a/ui/Logo/Logo.css
+++ b/ui/Logo/Logo.css
@@ -5,14 +5,16 @@
 
   @media (--smallDown) {
     display: none;
+    height: 34px !important;
+    width: 170px !important;
   }
 }
 
 .logoMobile.logoMobile {
   display: none;
-  width: 135px;
-  height: 34px;
-  
+  height: 34px !important;
+  width: 170px !important;
+
   @media (--smallDown) {
     display: flex;
   }
@@ -24,7 +26,7 @@
   cursor: pointer;
 
   @media (--smallDown) {
-    width: 135px;
-    height: 34px;
+    height: 34px !important;
+    width: 170px !important;
   }
 }
