--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -13,7 +13,6 @@
   font: var(--title-extra);
   text-align: center;
 
-
   @media (--smallDown) {
     font-size: 32px;
     line-height: 36px;
@@ -124,6 +123,7 @@
   position: relative;
   opacity: 1;
   z-index: 20;
+  border-radius: 8px;
 
   @media (--smallDown) {
     min-width: 280px;
@@ -138,17 +138,16 @@
 }
 
 .buttonContainer {
-  display: flex;
   position: relative;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 16px;
   font-size: 20px;
   background-color: #fff;
-  overflow: hidden;
+  overflow: visible;
   max-height: 306px;
   height: 100%;
-  box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.08);
   transition: all ease-in 0.2s !important;
   border: none;
   color: var(--color-text) !important;
@@ -162,13 +161,6 @@
     &:last-child {
       margin-bottom: 0;
     }
-  }
-
-  @media (--smallUp) {
-    &:hover {
-    box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.16);
-    transform: scale(1.02);
-  }
   }
 }
 
@@ -203,12 +195,34 @@
 .image {
   display: block;
   object-fit: cover;
+  border-radius: 8px;
 }
 
 .containerLarge {
   padding: 16px 0 0 0;
   grid-row: 1 / 3;
   border-radius: 8px;
+  transform: scale(1);
+
+  &::before {
+    border-radius: 8px;
+    box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.08);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    content: '';
+    z-index: -1;
+  }
+
+  &:hover {
+    transform: scale(1.02);
+
+    &::before {
+      box-shadow: 0 24px 40px 0 rgba(21, 24, 51, 0.16);
+    }
+  }
 
   & .buttonText {
     margin-bottom: 40px;
