--- a/features/landing/features/home/organisms/Main/components/Intro/Intro.css
+++ b/features/landing/features/home/organisms/Main/components/Intro/Intro.css
@@ -48,6 +48,16 @@
   gap: 8px;
   margin-bottom: 48px;
   text-align: center;
+  position: relative;
+
+
+  &::after {
+    content: '';
+    height: 100px;
+    width: 1px;
+    grid-row: 1 / 3;
+    grid-column: 4;
+  }
 
   overflow: -moz-scrollbars-none;
   scrollbar-width: none !important;
@@ -63,9 +73,10 @@
   }
 
   @media (--smallDown) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     overflow-x: scroll;
     overflow-y: hidden;
-    display: flex;
+    /* display: flex; */
     margin-right: -16px;
     margin-left: -16px;
     padding-left: 16px;
@@ -127,7 +138,7 @@
 
   @media (--smallDown) {
     min-width: 280px;
-    height: 304px;
+    height: auto;
     margin-right: 8px;
     box-shadow: none;
 
@@ -155,7 +166,7 @@
 
   @media (--smallDown) {
     min-width: 280px;
-    height: 304px;
+    height: 100%;
     margin-right: 8px;
 
     &:last-child {
