--- a/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -1,18 +1,22 @@
 .partnersList {
-  display: flex;
-  justify-content: space-between;
   margin-top: 48px;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 32px 16px;
+  
+  
 
   @media (--smallDown) {
     max-width: 100vw;
     margin-bottom: 0;
-    flex-wrap: nowrap;
+    /* flex-wrap: nowrap; */
     overflow: scroll;
     overscroll-behavior: contain;
     padding-left: 16px;
     margin-left: -16px;
     margin-right: -16px;
+    grid-template-columns: 1fr;
+    grid-auto-flow: column;
   }
 }
 
