--- a/features/landing/organisms/PartnerCard/PartnerCard.css
+++ b/features/landing/organisms/PartnerCard/PartnerCard.css
@@ -3,22 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 220px;
-  margin-right: 16px;
   color: var(--text-color-primary); 
-
-  &:nth-child(4) {
-    margin-right: 0 !important;
-  }
-
-  @media (--smallDown) {
-
-    margin-right: 16px;
-
-    &:nth-child(5) {
-      margin-right: 16px !important;
-    }
-  }
-
 }
 
 .logo {
@@ -56,4 +41,5 @@
   line-height: 20px;
   color: var(--text-color-secondary);
   white-space: pre-line;
+  margin: 0;
 }
