add api method for sanity refact partners to get from sanity

--- a/features/landing/features/request/molecules/Notification/Notification.css
+++ b/features/landing/features/request/molecules/Notification/Notification.css
@@ -3,7 +3,7 @@
   width: 100%;
   padding: 24px;
   margin-bottom: 64px;
-  border: 1px solid rgba(21,24,51,0.12);
+  border: 1px solid rgba(21, 24, 51, 0.12);
   border-radius: 8px;
 
   @media (--smallDown) {
