--- a/features/landing/features/request-chat/components/Conclusion/Conclution.css
+++ b/features/landing/features/request-chat/components/Conclusion/Conclution.css
@@ -15,7 +15,7 @@
 .notification {
   display: flex;
   padding: 24px;
-  border: 1px solid rgba(21,24,51,0.12);
+  border: 1px solid rgba(21, 24, 51, 0.12);
 
   border-radius: 8px;
   margin-bottom: 24px;
@@ -36,7 +36,7 @@
 
   @media (--smallDown) {
     margin-bottom: 8px;
-   }
+  }
 }
 
 .text li {
