--- a/ui/config.css
+++ b/ui/config.css
@@ -98,7 +98,7 @@ body {
 
   min-height: 100%;
   overflow-x: hidden;
-  background: var(--color-beige);;
+  background: var(--color-beige);
 }
 
 .ReactModalPortal {
