--- a/ui/config.css
+++ b/ui/config.css
@@ -65,6 +65,7 @@ body {
   --text-color-secondary: #616681;
 
   --background-color: #faf9f7;
+  --background-system: #FAF9F7;
   --divider-color: rgba(21, 24, 51, 0.08);
 
   --color-link: #2d47ea;
