add hero and helping

--- a/features/system/main/components/about/SystemAbout.css
+++ b/features/system/main/components/about/SystemAbout.css
@@ -41,7 +41,7 @@
 .feature {
   margin-right: 16px;
   border-radius: 20px 20px 20px 0px;
-  background-color: #FFEAB7;
+  background-color: #ffeab7;
   margin-bottom: 32px;
   padding: 12px 12px 20px 32px;
 
