--- a/features/system/for-clinics/ForClinics.css
+++ b/features/system/for-clinics/ForClinics.css
@@ -91,3 +91,84 @@
     font: var(--text16-24);
   }
 }
+
+.helpRequest {
+  &.helpRequest {
+    background: #faf9f7;
+  }
+
+  & .wrapper {
+    padding: 64px 16px 96px;
+    max-width: 928px;
+    margin: 0 auto;
+
+    @media (--smallDown) {
+      max-width: 100vw;
+    }
+  }
+
+  & .title {
+    max-width: 800px;
+    margin-bottom: 32px;
+    font: var(--title-regular);
+
+    @media (--smallDown) {
+      padding-top: 56px;
+      max-width: 100vw;
+      margin: 0 0 24px 0;
+      font: var(--title-medium);
+      text-align: left;
+    }
+  }
+
+  & .body {
+    display: flex;
+    align-items: flex-start;
+  }
+
+  & .formContainer {
+    background: #ffffff;
+    border: 1px solid rgba(21, 24, 51, 0.04);
+    box-shadow: 0px 32px 40px rgba(0, 9, 92, 0.12);
+    margin-right: 32px;
+    flex-grow: 1;
+    flex-shrink: 1;
+
+    @media (--smallDown) {
+      margin-right: 0;
+    }
+  }
+
+  & .bubble {
+    width: 288px;
+    border-radius: 20px 20px 20px 0px;
+    background-color: #ffeab7;
+
+    padding: 24px 12px 20px 20px;
+
+    flex-shrink: 0;
+    @media (--smallDown) {
+      display: none;
+    }
+  }
+}
+
+.partners {
+  &.partners {
+    padding: 64px 16px 64px;
+  }
+
+  & .title {
+    max-width: 800px;
+    margin-bottom: 32px;
+    font: var(--title-regular);
+
+    @media (--smallDown) {
+      padding-top: 56px;
+      max-width: 100vw;
+      margin: 0 0 24px 0;
+      font: var(--title-medium);
+      text-align: left;
+    }
+  }
+}
