--- a/features/system/main/components/donation/components/system-widget/SystemWidget.css
+++ b/features/system/main/components/donation/components/system-widget/SystemWidget.css
@@ -1,4 +1,62 @@
 .widget {
   padding: 40px 80px;
   margin-right: 32px;
+  box-shadow: 0px 32px 40px rgba(0, 9, 92, 0.12);
+}
+
+.frequencyForm {
+  min-width: 448px;
+  width: 100%;
+  margin-bottom: 16px;
+  border: 1px solid #dcdce7;
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 1fr 1fr;
+}
+
+.costForm {
+  display: grid;
+  justify-items: center;
+  gap: 1px;
+  background-color: #dcdce7;
+  border: 1px solid #dcdce7;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-bottom: 28px;
+}
+
+.cell-1 {
+  grid-column: span 1;
+}
+
+.cell-2 {
+  grid-column: span 2;
+}
+
+.cell-3 {
+  grid-column: span 3;
+}
+
+.selectWrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.button {
+  margin-top: 24px;
+  width: 100%;
+}
+
+.cancelText {
+  margin-top: 16px;
+  font: var(--text12-16);
+  color: var(--text-color-secondary);
+}
+
+.cancelLink {
+  color: var(--color-primary);
+  font: var(--text12-16) !important;
+
+  &:hover {
+    color: var(--text-color-secondary);
+  }
 }
