--- a/features/system/main/components/hero/components/nav-cards/NavCards.css
+++ b/features/system/main/components/hero/components/nav-cards/NavCards.css
@@ -10,6 +10,10 @@
   flex-direction: column;
   justify-content: space-between;
 
+  &:last-child {
+    margin-right: 0;
+  }
+
   &::before {
     box-shadow: 0px 32px 40px rgba(0, 9, 92, 0.12);
     position: absolute;
