--- a/features/common/client-layout/Layout.css
+++ b/features/common/client-layout/Layout.css
@@ -1,7 +1,7 @@
 .page {
   position: relative;
   flex-grow: 1;
-  max-width: 100vw;
+  max-width: 100%;
   padding-top: 40px;
   padding-bottom: 120px;
   background-color: var(--background-color);
