--- a/features/common/header/Header.css
+++ b/features/common/header/Header.css
@@ -3,7 +3,7 @@
   flex-shrink: 0;
   align-items: center;
   justify-content: space-between;
-  max-width: 100vw;
+  max-width: 100%;
   padding: 0 32px;
   background-color: var(--background-color);
   border-bottom: 1px solid var(--divider-color);
