--- a/features/landing/features/home/organisms/Corporate/components/Program/Program.css
+++ b/features/landing/features/home/organisms/Corporate/components/Program/Program.css
@@ -5,7 +5,7 @@
 
   @media (--smallDown) {
     flex-direction: column;
-    max-width: 100vw;
+    max-width: 100%;
     padding: 0 16px;
     margin-bottom: 80px;
   }
