--- a/features/system/main/components/about/SystemAbout.css
+++ b/features/system/main/components/about/SystemAbout.css
@@ -8,29 +8,10 @@
   font: var(--title-regular);
 
   @media (--smallDown) {
-    max-width: 100vw;
+    max-width: 100%;
     margin: 0 0 24px 0;
     font: var(--title-medium);
     text-align: left;
-  }
-}
-
-.textWrapper {
-  margin-bottom: 32px;
-  max-width: 768px;
-
-  & p {
-    margin: 0;
-    font: var(--text18-28);
-    margin-bottom: 16px;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  & a {
-    color: var(--color-primary);
   }
 }
 
@@ -40,10 +21,8 @@
 
 .feature {
   margin-right: 16px;
-  border-radius: 20px 20px 20px 0px;
-  background-color: #ffeab7;
+
   margin-bottom: 32px;
-  padding: 12px 12px 20px 32px;
 
   &:last-child {
     margin-right: 0;
