--- a/features/system/main/components/donation/SystemDonation.css
+++ b/features/system/main/components/donation/SystemDonation.css
@@ -1,21 +1,7 @@
-.donation {
-  padding: 64px 0 96px;
-}
-
-.title {
-  max-width: 800px;
-  margin-bottom: 32px;
-  font: var(--title-regular);
-
-  @media (--smallDown) {
-    max-width: 100vw;
-    margin: 0 0 24px 0;
-    font: var(--title-medium);
-    text-align: left;
-  }
+.wrapperOuter {
+  background: #faf9f7;
 }
 
 .content {
   display: flex;
-  
 }
