--- a/ui/globals.css
+++ b/ui/globals.css
@@ -1,14 +1,52 @@
-.global-section {
+.gl-wrapper {
+  max-width: 928px;
+  margin: 0 auto;
   padding: 0 16px 0;
-  padding-bottom: 96px;
-  max-width: 800px;
+
   @media (--smallDown) {
-    width: 100vw;
+    max-width: none;
+  }
+}
+
+.gl-section {
+  padding-bottom: 96px;
+  @media (--smallDown) {
+    width: 100%;
     padding-bottom: 56px;
   }
 }
 
-.global-sectionTitle {
+.gl-text {
+  max-width: 768px;
+  margin-bottom: 32px;
+
+  & p {
+    margin: 0;
+    font: var(--text18-28);
+    margin-bottom: 16px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  & a {
+    color: var(--color-primary);
+  }
+
+  @media (--smallWidth) {
+    margin-bottom: 24px;
+  }
+}
+
+.gl-first-section {
+  padding-top: 64px;
+  @media (--smallDown) {
+    padding-top: 40px;
+  }
+}
+
+.gl-sectionTitle {
   padding-bottom: 32px;
   margin: 0;
   font: var(--title-regular);
@@ -20,7 +58,7 @@
   }
 }
 
-.global-pageTitle {
+.gl-pageTitle {
   margin: 0 auto 32px;
   font: var(--title-extra);
 
@@ -31,7 +69,7 @@
   }
 }
 
-.global-bubble {
+.gl-bubble {
   width: 288px;
   border-radius: 20px 20px 20px 0px;
   background-color: #ffeab7;
