--- a/features/system/layout/components/header/navigation/SystemNavigation.css
+++ b/features/system/layout/components/header/navigation/SystemNavigation.css
@@ -20,6 +20,7 @@
     z-index: 200;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: flex-start;
     min-width: 288px;
     height: 100vh;
     padding: 16px 16px 0 24px;
@@ -28,6 +29,18 @@
       0 0 20px 0 rgba(63, 63, 68, 0.12);
     transition: transform 250ms ease-out;
     will-change: transform;
+  }
+}
+
+.mainMenu {
+  @media (max-width: 959px) {
+    width: 100%;
+  }
+}
+
+.contentMenu {
+  @media (max-width: 959px) {
+    width: 100%;
   }
 }
 
@@ -53,6 +66,15 @@
 
     &:last-of-type:focus {
       border-bottom: 1px solid var(--divider-color);
+    }
+  }
+}
+
+
+.mainLink {
+  @media (max-width: 959px) {
+    &:last-child {
+      border-bottom: none;
     }
   }
 }
@@ -108,5 +130,8 @@
 }
 
 .contentLink {
-  color: #82839b;
+  color: #82839b; 
+  @media (max-width: 959px) {
+    color: var(--color-text-primary);
+  }
 }
