--- a/features/system/main/components/help/SystemHelp.css
+++ b/features/system/main/components/help/SystemHelp.css
@@ -1,16 +1,18 @@
 .systemHelp {
   padding: 64px 0 32px;
+
+  @media (--smallDown) {
+    padding: 40px 16px 56px;
+  }
 }
 
 .title {
   max-width: 800px;
   margin-bottom: 32px;
-  font: var(--title-regular);
+  font: var(--title-regular-system);
 
   @media (--smallDown) {
-    max-width: 100vw;
     margin: 0 0 24px 0;
-    font: var(--title-medium);
     text-align: left;
   }
 }
