--- a/features/system/main/components/hero/components/nav-cards/NavCards.css
+++ b/features/system/main/components/hero/components/nav-cards/NavCards.css
@@ -12,6 +12,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  border: 1px solid rgba(21, 24, 51, 0.04);
+
+  &:hover {
+    color: var(--color-text-primary);
+  }
 
   &:last-child {
     margin-right: 0;
@@ -33,7 +38,6 @@
     margin-right: 0;
     margin-bottom: 10px;
     background-color: #fff;
-    border: 1px solid rgba(21, 24, 51, 0.04);
 
     &:last-child {
       margin-bottom: 0;
@@ -45,9 +49,7 @@
   padding: 16px 24px 24px 20px;
 }
 
-.titleWrapper {
-  white-space: normal;
-}
+
 
 .title {
   font: var(--title-regular);
