--- a/src/features/system/main/components/about/SystemAbout.css
+++ b/src/features/system/main/components/about/SystemAbout.css
@@ -1,14 +1,8 @@
-.wrapper {
-  background-color: var(--background-system);
-}
-
-.donation {
-  max-width: 928px;
-  margin: 0 auto;
+.about {
   padding: 64px 0 96px;
 
   @media (--smallDown) {
-    padding: 40px 16px 56px;
+    padding: 40px 16px 24px;
   }
 }
 
@@ -18,18 +12,71 @@
   font: var(--title-regular);
 
   @media (--smallDown) {
-    max-width: 100%;
+    max-width: 100vw;
     margin: 0 0 24px 0;
     font: var(--title-medium);
     text-align: left;
   }
 }
 
+.textWrapper {
+  margin-bottom: 32px;
+  max-width: 768px;
+
+  & p {
+    margin: 0;
+    font: var(--text18-28);
+    margin-bottom: 16px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  & a {
+    color: var(--color-primary);
+  }
+
+
+  @media (--smallDown) {
+   margin-bottom: 24px;
+  }
+}
+
 .features {
   display: flex;
- 
-  
+  margin-bottom: 32px;
+
   @media (--smallDown) {
     flex-direction: column;
+    margin-bottom: 24px;
   }
+}
+
+.feature {
+  margin-right: 16px;
+  border-radius: 20px 20px 20px 0px;
+  background-color: var(--color-bubble);
+  padding: 12px 12px 32px 20px;
+  font: var(--text18-28);
+  width: calc(100% / 3);
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  @media (--smallDown) {
+    padding: 12px 12px 12px 20px;
+    margin-right: 0;
+    margin-bottom: 12px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  
+  }
+}
+
+.slogan {
+  font: var(--title-small);
 }
