--- a/src/features/system/main/components/hero/components/bubble/Bubble.css
+++ b/src/features/system/main/components/hero/components/bubble/Bubble.css
@@ -1,5 +1,5 @@
 .bubble {
-  background-color: #ffeab7;
+  background-color: var(--color-bubble);
   padding: 12px 16px 12px 20px;
   border-radius: 36px 20px 20px 0px;
 }
