system: fix styles

--- a/src/features/system/main/components/about/SystemAbout.css
+++ b/src/features/system/main/components/about/SystemAbout.css
@@ -69,6 +69,7 @@
     padding: 12px 12px 12px 20px;
     margin-right: 0;
     margin-bottom: 12px;
+    width: 100%;
 
     &:last-child {
       margin-bottom: 0;
