--- a/src/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/src/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -3,10 +3,9 @@
   grid-template-columns: repeat(4, 1fr);
   gap: 32px 16px;
 
-  @media (--smallDown) {
+  @media (--mediumSecondDown) {
     max-width: 100%;
     margin-bottom: 0;
-    /* flex-wrap: nowrap; */
     overflow: scroll;
     overscroll-behavior: contain;
     padding-left: 16px;
