add active state to header

--- a/src/features/system/layout/components/header/SystemHeader.css
+++ b/src/features/system/layout/components/header/SystemHeader.css
@@ -1,11 +1,16 @@
 .headerWrapper {
   display: flex;
   align-items: center;
+  background: var(--color-beige);
 
   @media (--mediumDown) {
     justify-content: space-between;
     padding: 6px;
   }
+}
+
+.landing {
+  background: white;
 }
 
 .iconWrapper {
