--- a/src/features/system/main/components/hero/components/bubble/Bubble.css
+++ b/src/features/system/main/components/hero/components/bubble/Bubble.css
@@ -2,6 +2,7 @@
   background-color: var(--color-bubble);
   padding: 12px 16px 12px 20px;
   border-radius: 36px 20px 20px 0px;
+  animation: fade 1s ease-in;
 }
 
 .hint {
@@ -9,11 +10,11 @@
 }
 
 @keyframes fade {
- 0% {
-   opacity: 0%;
+  0% {
+    opacity: 0%;
+  }
+ 
+  100% {
+    opacity: 100%;
+  }
  }
-
- 100% {
-   opacity: 100%;
- }
-}
