--- a/src/features/system/layout/components/header/SystemHeader.css
+++ b/src/features/system/layout/components/header/SystemHeader.css
@@ -1,4 +1,8 @@
 .headerWrapper {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+
   display: flex;
   align-items: center;
   background: var(--color-beige);
