--- a/src/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/src/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -86,8 +86,8 @@
 .buttonLabel {
   margin: 0;
   font: var(--text14-20);
-  font-weight: 500;
   text-align: center;
+  color: var(--color-primary);
 }
 
 .list {
