add icons demo page

--- a/src/ui/globals.css
+++ b/src/ui/globals.css
@@ -37,7 +37,7 @@
     color: var(--color-primary);
   }
 
-  @media (--smallWidth) {
+  @media (max-width: 767px) {
     margin-bottom: 24px;
   }
 }
