--- a/src/features/common/form/components/SubmitTooltip/SubmitSucceeded.css
+++ b/src/features/common/form/components/SubmitTooltip/SubmitSucceeded.css
@@ -1,11 +1,15 @@
 .wrapper {
   margin-top: 32px;
+  display: flex;
 }
 
 .icon {
-  width: 20px;
-  height: 20px;
   margin-right: 10px;
+
+  & svg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .text {
