fix anchor links

--- a/src/ui/config.css
+++ b/src/ui/config.css
@@ -23,6 +23,11 @@
   outline-color: var(--color-primary);
 }
 
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   -webkit-overflow-scrolling: touch;
   /* fonts */
