contacts: update info

--- a/src/features/landing/features/contacts/page/Contacts.css
+++ b/src/features/landing/features/contacts/page/Contacts.css
@@ -4,6 +4,7 @@
   max-width: 928px;
   padding: 64px 0 120px;
   text-align: left;
+  background-color: #fff;
 
   &::after {
     position: absolute;
