--- a/src/features/system/layout/components/header/SystemHeader.css
+++ b/src/features/system/layout/components/header/SystemHeader.css
@@ -2,6 +2,7 @@
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 10;
 
   display: flex;
   align-items: center;
@@ -13,8 +14,14 @@
   }
 }
 
+
+.narrowHeader {
+  box-shadow: 0 0 8px 0 rgba(63, 63, 68, 0.04),
+  0 0 20px 0 rgba(63, 63, 68, 0.12);
+}
+
 .landing {
-  background: white;
+  background: #fff;
 }
 
 .iconWrapper {
