--- a/src/features/system/layout/components/header/navigation/SystemNavigation.css
+++ b/src/features/system/layout/components/header/navigation/SystemNavigation.css
@@ -12,7 +12,7 @@
   display: flex;
   width: 100%;
 
-  @media (max-width: 959px) {
+  /* @media (max-width: 959px) {
     position: fixed;
     top: 0;
     right: 0;
@@ -28,18 +28,18 @@
       0 0 20px 0 rgba(63, 63, 68, 0.12);
     transition: transform 250ms ease-out;
     will-change: transform;
-  }
+  } */
 }
 
 .mainMenu {
-  @media (max-width: 959px) {
-    width: 100%;
+  @media (--smallSecondDown) {
+    display: none;
   }
 }
 
 .contentMenu {
-  @media (max-width: 959px) {
-    width: 100%;
+  @media (--largeDown) {
+    display: none;
   }
 }
 
@@ -54,7 +54,7 @@
   border-bottom: none;
   transition: padding ease-in 0.5s;
 
-  @media (max-width: 959px) {
+  /* @media (max-width: 959px) {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -69,7 +69,7 @@
     &:last-of-type:focus {
       border-bottom: 1px solid var(--divider-color);
     }
-  }
+  } */
 }
 
 .mainLink {
@@ -158,4 +158,8 @@
 
 .buttonWrap {  
   border: none;
+
+  @media (--largeDown) {
+    display: none;
+  }
 }
