--- a/src/ui/config.css
+++ b/src/ui/config.css
@@ -107,6 +107,7 @@ body {
 @custom-media --mediumSecondDown (max-width: 832px);
 @custom-media --mediumDown (max-width: 959px);
 @custom-media --largeDown (max-width: 1200px);
+@custom-media --largeSecondDown (max-width: 1269px);
 
 @custom-media --xsmallUp (min-width: 501px);
 @custom-media --smallUp (min-width: 768px);
