--- a/src/features/login/features/signIn/organisms/Modal/SignIn.css
+++ b/src/features/login/features/signIn/organisms/Modal/SignIn.css
@@ -6,7 +6,7 @@
   background-color: #fff;
   border: none;
   @media (--smallDown) {
-    padding: 0 16px;
+    padding: 0 16px 16px;
     margin: 0 auto;
   }
 }
