ask: update styles

--- a/src/features/common/layout/organisms/Header/Header.css
+++ b/src/features/common/layout/organisms/Header/Header.css
@@ -1,9 +1,13 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 0 48px;
   background-color: var(--color-beige);
+
+  @media (--largeDown) {
+    display: none;
+  }
 
   @media (--mediumDown) {
     padding: 8px 16px 6px;
