--- a/src/features/common/layout/organisms/Header/organisms/Navigation/Navigation.css
+++ b/src/features/common/layout/organisms/Header/organisms/Navigation/Navigation.css
@@ -2,40 +2,13 @@
   position: relative;
   display: flex;
   align-items: center;
-
-  @media (max-width: 959px) {
-    flex-direction: column;
-    align-items: flex-start;
-    min-width: 288px;
-    height: 100vh;
-    padding: 16px 16px 0 24px;
-    background-color: white;
-    box-shadow: 0 0 8px 0 rgba(63, 63, 68, 0.04),
-      0 0 20px 0 rgba(63, 63, 68, 0.12);
-  }
 }
 
 .link {
   padding: 36px 0;
   margin-right: 32px;
   white-space: nowrap;
-
-  @media (max-width: 959px) {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    padding: 11px 0 12px 0;
-    margin-right: 0;
-    border-top: 1px solid var(--divider-color);
-
-    &:last-of-type {
-      border-bottom: 1px solid var(--divider-color);
-    }
-
-    &:last-of-type:focus {
-      border-bottom: 1px solid var(--divider-color);
-    }
-  }
+  color: var(--color-primary);
 }
 
 .closeButton {
