--- a/src/features/system/layout/components/header/SystemHeader.css
+++ b/src/features/system/layout/components/header/SystemHeader.css
@@ -3,7 +3,7 @@
   position: sticky;
   top: 0;
   z-index: 10;
-  transition: box-shadow 0.5s ease-in;
+  transition: box-shadow 0.5s ease-in, transform 0.2s ease-in;
 
   display: flex;
   align-items: center;
@@ -15,8 +15,16 @@
   }
 }
 
+.show {
+  transform: translateY(0);
+}
+
+.hide {
+  transform: translate(0, -100%);
+}
 
 .narrowHeader {
+  transform: translateY(-100%);
   box-shadow: 0 0 8px 0 rgba(63, 63, 68, 0.04),
   0 0 20px 0 rgba(63, 63, 68, 0.12);
 }
