--- a/src/features/system/main/components/donation/components/system-widget/SystemWidget.css
+++ b/src/features/system/main/components/donation/components/system-widget/SystemWidget.css
@@ -69,6 +69,7 @@
 
 .cancelText {
   margin-top: 16px;
+  margin-bottom: 0;
   font: var(--text12-16);
   color: var(--text-color-secondary);
 }
@@ -79,5 +80,29 @@
 
   &:hover {
     color: var(--text-color-secondary);
+  }
+}
+
+.inputWrapper {
+  margin-bottom: 12px;
+  width: 448px;
+}
+
+.backButton {
+  padding-top: 18px;
+  padding-bottom: 18px;
+  color: #82839B;
+  border: none;
+  cursor: pointer;
+  box-shadow: none;
+  margin-right: 32px;
+}
+
+.buttonsWrapper {
+  display: flex;
+  margin-top: 42px; 
+
+  & .actionButton {
+    width: 100%;
   }
 }
