--- a/src/features/common/shareWidget/ShareWidget.css
+++ b/src/features/common/shareWidget/ShareWidget.css
@@ -36,19 +36,19 @@
 }
 
 .iconWrapper {
-    border-left: 1px solid rgba(21, 24, 51, 0.12);
-    display: flex;
+    border-left: 1px solid rgba(21, 24, 51, 0.12)!important;
+    display: flex!important;
     align-items: center;
     width: 100%;
     justify-content: center;
 
-@media (--smallDown) {
-    min-height: 70px;
+    @media (--smallDown) {
+        min-height: 70px;
 
-&:first-child {
-     border-left: none;
- }
-}
+        &:first-child {
+             border-left: none!important;
+         }
+    }
 }
 
 .icon {
