--- a/src/features/system/main/components/donation/components/system-widget/SystemWidget.css
+++ b/src/features/system/main/components/donation/components/system-widget/SystemWidget.css
@@ -88,10 +88,16 @@
 .inputWrapper {
   margin-bottom: 12px;
   width: 448px;
+  position: relative;
 }
 
 .input label {
   margin-bottom: 4px !important;
+}
+
+.error {
+  position: absolute;
+  color: var(--color-danger); 
 }
 
 .backButton {
