--- a/src/features/system/main/components/donation/components/system-widget/SystemWidget.css
+++ b/src/features/system/main/components/donation/components/system-widget/SystemWidget.css
@@ -2,7 +2,7 @@
   padding: 40px 80px 48px;
   background-color: #fff;
   margin-right: 32px;
-
+  max-width: 608px;
   box-shadow: 0px 32px 40px rgba(0, 9, 92, 0.12);
 
   @media (--smallDown) {
@@ -97,7 +97,7 @@
 
 .error {
   position: absolute;
-  color: var(--color-danger); 
+  color: var(--color-danger);
 }
 
 .backButton {
@@ -117,4 +117,26 @@
   & .actionButton {
     width: 100%;
   }
+}
+
+.photo {
+  max-width: 328px;
+  margin: 0 auto;
+  display: block;
+  border: 1px solid #DCDCE7;
+}
+
+.title {
+  font: var(--title-medium);
+  margin-bottom: 8px;
+  text-align: center;
+}
+
+.text {
+  margin: 0 0 24px 0;
+}
+
+.slogan {
+  margin: 0 0 16px 0;
+  text-align: center;
 }
