--- a/src/ui/button/Button.css
+++ b/src/ui/button/Button.css
@@ -3,14 +3,11 @@
   cursor: pointer;
   background-color: transparent;
   border: none;
-  border-radius: 6px;
-  transition: border-color 0.2s, background-color 0.2s;
+  font-size: 18px;
+  line-height: 28px;
+
   &[disabled] {
     opacity: 0.4;
-  }
-
-  @media (--smallDown) {
-    border-radius: 4px;
   }
 }
 
@@ -20,17 +17,13 @@
   transition: border-color 0.2s, background-color 0.2s;
   color: #fff;
   background-color: var(--color-primary);
-  box-shadow: inset 0 1px 1px 0.5px rgba(255, 255, 255, 0.1),
-    0 3px 6px 0 rgba(60, 84, 238, 0.2);
+
   &:hover:enabled,
   &:focus:enabled {
     background-color: #354ad4;
-    box-shadow: inset 0 1px 1px 0.5px rgba(255, 255, 255, 0.1),
-      0 1px 3px 0 rgba(60, 84, 238, 0.1);
   }
   &:active:enabled {
     background-color: #2f41ba;
-    box-shadow: none;
   }
 }
 
@@ -69,7 +62,6 @@
 .extra-large {
   transition: border-color 0.2s, background-color 0.2s;
   padding: 17px 36px 19px 36px;
-  border-radius: 8px;
   box-shadow: none;
 
   font: var(--text18-28);
@@ -78,25 +70,36 @@
     font: var(--text16-24);
     line-height: 24px;
     box-shadow: none;
-    border-radius: 6px;
   }
 }
 
 .large {
   padding: 11px 28px 13px 28px;
-  font: var(--text16-24);
 }
 
 .medium {
-  padding: 7px 20px;
-  font: var(--text16-24);
+  padding: 18px 20px;
+  font: var(--text18-28);
 }
 
 .small {
-  padding: 5px 16px;
-  font: var(--text14-20);
+  padding: 8px 16px;
+  font: var(--text16-24);
 }
 
 .super {
   background-color: #ffd46d;
+}
+
+.extra-large {
+  transition: border-color 0.2s, background-color 0.2s;
+
+  box-shadow: none;
+
+  padding: 18px 32px !important;
+  width: 100%;
+  max-width: initial;
+  font: var(--text-18-28);
+
+  border-radius: 0;
 }
