--- a/src/features/system/layout/components/header/SystemHeader.css
+++ b/src/features/system/layout/components/header/SystemHeader.css
@@ -23,7 +23,7 @@
   transform: translate(0, -100%);
 }
 
-.mobile {
+.narrow {
   box-shadow: 0 0 8px 0 rgba(63, 63, 68, 0.04),
     0 0 20px 0 rgba(63, 63, 68, 0.12);
 }
