--- a/src/ui/actionBlock/ActionBlock.css
+++ b/src/ui/actionBlock/ActionBlock.css
@@ -1,6 +1,10 @@
 .wrapper {
   padding: 16px 24px;
   background: #faf9f7;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
 
   @media (--smallDown) {
     padding: 12px 16px;
@@ -12,5 +16,32 @@
   margin-bottom: 20px;
   font: var(--title-small);
   @media (--smallDown) {
+  }
+}
+
+.iconWrapper {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  bottom: 16px;
+  right: 16px;
+  & > * {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  @media (--smallDown) {
+    margin-bottom: 8px;
+    position: relative;
+    bottom: 0;
+    right: 0;
+    order: -1;
+  }
+}
+
+.button {
+  @media (--smallDown) {
+    width: 100%;
   }
 }
