--- a/src/ui/nav-link/NavLink.css
+++ b/src/ui/nav-link/NavLink.css
@@ -30,12 +30,15 @@
 .nav {
   color: var(--text-color-primary);
   transition: color 0.2s;
+  border-bottom: none !important;
 
   &:hover {
     color: var(--color-link);
+    border-bottom: none !important;
   }
 
   &:active {
     color: var(--color-link);
+    border-bottom: none !important;
   }
 }
