--- a/src/features/system/layout/components/header/navigation/SystemNavigation.css
+++ b/src/features/system/layout/components/header/navigation/SystemNavigation.css
@@ -112,6 +112,9 @@
 
 .helpButton {
   transform: translateZ(0);
+  height: 100%;
+  font-size: 18px;
+  line-height: 28px;
   transition: color 0.2s, background-color 0.2s, padding ease-in 0.5s !important;
 }
 
