--- a/src/ui/Select/SelectGlobal.css
+++ b/src/ui/Select/SelectGlobal.css
@@ -1,10 +1,5 @@
 .ant-select {
   width: 100%;
-  border-radius: 6px;
-  border-top-left-radius: 6px;
-  border-top-right-radius: 6px;
-  border-bottom-right-radius: 6px;
-  border-bottom-left-radius: 6px;
   box-shadow: 0 0 0 1px #d9d9d9;
 }
 
@@ -13,8 +8,10 @@
   padding: 14px 16px;
   font: var(--text16-24);
   border: none !important;
+  border-radius: 0 !important;
 
   &:hover {
+    border-radius: 0 !important;
     border: none !important;
     box-shadow: 0 0 0 1px var(--color-primary);
   }
