mobile menu: fix styles

--- a/src/features/system/layout/components/header/system-mobile-menu/SystemMobileMenu.css
+++ b/src/features/system/layout/components/header/system-mobile-menu/SystemMobileMenu.css
@@ -1,5 +1,6 @@
 .menu {
   height: 100%;
+  width: 100vw;
   background-color: var(--background-system);
 }
 
@@ -26,9 +27,14 @@
 .helpButtonWrap {
   border-bottom: none;
   width: 100%;
+  display: flex;
 
   & button {
     width: 100%;
+  }
+
+  @media (--largeDown) {
+    padding: 0 16px;
   }
 }
 
