--- a/src/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
+++ b/src/features/landing/features/home/organisms/Corporate/components/Partners/components/PartnersList/PartnersList.css
@@ -9,8 +9,9 @@
     overflow: scroll;
     overscroll-behavior: contain;
     padding-left: 16px;
-    margin-left: -16px;
-    margin-right: -16px;
+    /* margin-left: -16px;
+    margin-right: -16px; */
+    margin: 0;
     grid-template-columns: 1fr;
     grid-auto-flow: column;
   }
